# advent-of-code

./: .gitignore  pyproject.toml
2025/day1/: a.py  b.py
2025/day10/: a.py  b.py
2025/day11/: a.py  b.py
2025/day2/: a.py  b.py
2025/day3/: a.py  b.py
2025/day4/: a.py  b.py
2025/day5/: a.py  b.py
2025/day6/: a.py  b.py
2025/day7/: a.py  b.py
2025/day8/: a.py  b.py
2025/day9/: a.py  b.py
utils/: puzzle_input.py  secrets.py  union_find.py
