[project]
name = "aoc"
version = "0.1.0"
description = "Advent of Code Solutions"
authors = [
    {name = "Alex Katopodis"}
]
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false


[tool.poetry.dependencies]
requests = "^2.32.5"
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
